# Sitios-Historicos

./: .gitignore  README.md  estructura.txt  et --hard 17bdd98  list_structure.sh  main.py
admin/: .gitignore  app.py  creadorBd.sql  gunicorn.conf.py  main.py  migration_postgis.sql  pyproject.toml  pytest.ini
admin/src/core/: board.py  database.py  models.py  seeds.py
admin/src/core/auth/: __init__.py  feature_flag.py  feature_flags.py  permission.py  role.py  servicios.py  user.py  user_validador.py  users.py  utils.py
admin/src/core/board/: __init__.py  board.py  category.py  repository.py  site.py  site_history.py  site_history_serv.py  site_tag.py  sites.json  sitio_historico.py  sitios.json  state.py  tag.py  users.py
admin/src/core/busqueda_avanzada/: busqueda_avanzada.py
admin/src/core/entity/: __init__.py  category.py  feature_flag.py  permission.py  public_user.py  review.py  role.py  site.py  site_favorite.py  site_history.py  site_image.py  site_postgis.py  site_visit.py  state.py  tag.py  user_validador.py  (+1 more)
admin/src/web/: __init__.py  config.py  oauth.py  storage.py  utils.py
admin/static/: sitios.css  styles.css
admin/templates/: home.html
admin/test/: check_db_postgres.py  check_db_windows.py  check_tables.py  check_tables_db.py  check_tables_db_ascii.py  sync_db.py  sync_db_windows.py  test_sitio_historico.py  test_sitios.py
admin/tests/: README.md  conftest.py  test_api_final.py  test_api_with_auth.py  test_config.py  test_db_connection.py  test_home.py  test_real_api.py  test_unit_api.py
admin/web/handlers/: error.html  error.py
(+145 files in other folders)
