[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Erik Cespedes <cespedeserik87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
