[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Erik Cespedes <cespedeserik87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = "^3.1.2"
psycopg2-binary = "^2.9.10"
flask-sqlalchemy-lite = "^0.1.0"
flask-session = "^0.8.0"
flask-bcrypt = "^1.0.1"
minio = "^7.2.18"
flask-cors = "^6.0.1"
marshmallow = "^4.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
